# rotvi

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/: api.hpp  color.hpp  cursor.hpp  tools.hpp
include/syntax/: syntax.hpp
include/syntax/CXX/: keywords.hpp  match.hpp
lib/: apiInit.cpp  cmdProcessor.cpp  cursor.cpp  file.cpp  keyPressHandler.cpp  main.cpp  syntax.cpp  tools.cpp
